Fixed page contents from overflowing top of page on small landscape devices.

--- a/app/static/styles.scss
+++ b/app/static/styles.scss
@@ -24,7 +24,6 @@
     position: fixed;
     width: 100%;
     background-color: white;
-    z-index: 1;
 
     .hamburger-button {
         display: flex;
@@ -54,7 +53,7 @@
         display: none;
         flex-direction: column;
         justify-content: center;
-        z-index: 1;
+        z-index: 2;
     }
 
     .hamburger-close-button.show {
@@ -98,6 +97,7 @@
         height: 100%;
         background-color: white;
         overflow: hidden;
+        z-index: 1;
         transition: 0.4s;
     }
     
@@ -124,7 +124,7 @@
     justify-content: center;
     gap: 1rem;
     font-family: "Open Sans", sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0 1rem 0 1rem;
 
     .button-container {
@@ -151,11 +151,16 @@
     }
 }
 
+.content-wrapper {
+    margin-top: calc(4rem + 1rem);
+    margin-bottom: 1rem;
+}
+
 .login {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     padding-left: 1rem;
     padding-right: 1rem;
     font-family: "Roboto", sans-serif;
@@ -165,7 +170,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     padding-left: 1rem;
     padding-right: 1rem;
     font-family: "Roboto", sans-serif;
@@ -176,7 +181,7 @@
     flex-direction: column;
     gap: 1rem;
     background-color: #f7f7f7;
-    padding: 2rem;
+    padding: 1rem;
     width: 24rem;
 
     h1 {
@@ -296,6 +301,10 @@
     .login {
         padding-left: 8rem;
         padding-right: 8rem;
+    }
+
+    .form-section {
+        padding: 2rem;
     }
 }
 
